--- a/PflStoreProject/Views/Home/Show.cshtml
+++ b/PflStoreProject/Views/Home/Show.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@model List<ProductViewModel>
+@model ProductDetailsViewModel
 
 
 
@@ -14,6 +14,6 @@
         @await Component.InvokeAsync("ProductNav")
     </div>
     <div class="col-sm-12 col-md-9">
-        Product Details
+        @Model.ImageUrl
     </div>
-</div> 
+</div>
