hardcode order data to hit order api

--- a/PflStoreProject/Views/Order/CustomerData.cshtml
+++ b/PflStoreProject/Views/Order/CustomerData.cshtml
@@ -14,7 +14,7 @@
 
 
     <div class="col-md-6">
-        <form class="form-panel" asp-action="ShipInfo" asp-controller="Checkout">
+        <form class="form-panel" asp-action="CustomerData" asp-controller="Order">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <font color="#cc3300">*</font><label asp-for="FirstName" class="control-label"></label>
@@ -30,17 +30,22 @@
                 <font color="#cc3300">*</font> <label asp-for="Phone" class="control-label"></label>
                 <input asp-for="Phone" class="form-control" />
                 <span asp-validation-for="Phone" class="text-danger"></span>
+            </div>            
+            <div class="form-group">
+                <font color="#cc3300">*</font> <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
             <div class="form-group">
-                <font color="#cc3300">*</font><label asp-for="AddressLine1" class="control-label"></label>
-                <input asp-for="AddressLine1" class="form-control" />
-                <span asp-validation-for="AddressLine1" class="text-danger"></span>
+                <font color="#cc3300">*</font><label asp-for="Address1" class="control-label"></label>
+                <input asp-for="Address1" class="form-control" />
+                <span asp-validation-for="Address1" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AddressLine2" class="control-label"></label>
-                <input asp-for="AddressLine2" class="form-control" />
-                <span asp-validation-for="AddressLine2" class="text-danger"></span>
+                <label asp-for="Address2" class="control-label"></label>
+                <input asp-for="Address2" class="form-control" />
+                <span asp-validation-for="Address2" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <font color="#cc3300">*</font> <label asp-for="City" class="control-label"></label>
@@ -54,9 +59,9 @@
                 <span asp-validation-for="State" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <font color="#cc3300">*</font><label asp-for="Zipcode" class="control-label"></label>
-                <input maxlength="5" asp-for="Zipcode" class="form-control" />
-                <span asp-validation-for="Zipcode" class="text-danger"></span>
+                <font color="#cc3300">*</font><label asp-for="PostalCode" class="control-label"></label>
+                <input maxlength="5" asp-for="PostalCode" class="form-control" />
+                <span asp-validation-for="PostalCode" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Continue Checkout" class="btn btn-block tp-btn" />
