--- a/PflStoreProject/Views/Product/Index.cshtml
+++ b/PflStoreProject/Views/Product/Index.cshtml
@@ -8,17 +8,22 @@
 
 
 
+<div class="row">
+  
+        @foreach (var product in Model)
+        {
 
-    @foreach(var product in Model)
-    {
-        <a asp-action="Show" asp-controller="Product" asp-route-id="@product.ProductID">
-            <div class="card" style="width: 8rem;">
-                <img class="card-img-top" src="@product.ImageUrl" />
-                <div class="card-body">
-                    <h5 class="card-title">@product.Name</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">@product.Description</h6>
-                    <img class="card-img-top" src="@product.ImageUrl" alt="Product Sample"/>
+            <a class="card col-sm-12 col-md-2 col-lg-2"  asp-action="Show" asp-controller="Product" asp-route-id="@product.ProductID">
+                <div  >
+
+                    <div class="card-body">
+                        
+                        <h6 class="card-subtitle mb-2 text-muted">@product.Description</h6>
+                        <img class="card-img-top" src="@product.ImageUrl" alt="Product Sample" />
+                        <h5 class="card-title">@product.Name</h5>
+                        </div>
                 </div>
-            </div>
-        </a>
+            </a>
         }
+    
+</div>
