--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
+        <div class="">
             <div class="navbar-brand">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -21,14 +21,14 @@
                     <span class="nav-item"></span>
                     <span class="nav-item"></span>
                 </button>
-                <div class="pull-left">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">PflStoreProject</a>
+                <div class="">
+                    <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">PFL Store Project</a>
                 </div>            </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Products</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">Placeholder</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Placeholder</a></li>
+                    @* <li><a asp-area="" asp-controller="Product" asp-action="Index">Products</a></li> *@
+                    @* <li><a asp-area="" asp-controller="Home" asp-action="About">Placeholder</a></li> *@
+                    @* <li><a asp-area="" asp-controller="Home" asp-action="Contact">Placeholder</a></li> *@
                 </ul>
             </div>
         </div>
