--- a/PflStoreProject/Views/_ViewImports.cshtml
+++ b/PflStoreProject/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using PflStoreProject
-@using PflStoreProject.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using PflStoreProject;
+
+@using PflStoreProject.Models;
+@using PflStoreProject.Models.ViewModels;
+@using PflStoreProject.Models.BindingModels;
