--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
 </div>
 
 
-
+    <script src="/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/js/site.js"></script>
 </body>
 </html>
