--- a/PflStoreProject/Views/Product/Show.cshtml
+++ b/PflStoreProject/Views/Product/Show.cshtml
@@ -10,80 +10,75 @@
 
 
     <div class="row">
-        <div class="col-sm-12 col-md-4 col-lg-4">
+        <div class="mt-5 col-sm-12 col-md-4 col-lg-4">
             <h4>Product List</h4>
             <h6>(TODO: Nav by Category)</h6>
             @await Component.InvokeAsync("ProductNav")
         </div>
-        <div class="col-sm-12 col-md-8">
-            <form asp-action="CreateOrderItem" asp-controller="Order" method="post">
-                <h4>@Model.Detail.Name</h4>
+        <div class="container col-sm-12 col-md-8">
+            <form asp-action="CreateOrderItem" enctype="multipart/form-data" asp-controller="Order" method="post">
+                
                 <img src="@Model.Detail.ImageURL" alt="Alternate Text" />
+                <h4>@Model.Detail.Name</h4>
                 <h6>@Model.Detail.Description</h6>
                 @foreach (var location in Model.Detail.DeliveredPrices)
                 {
                     if (Model.Detail.ShippingMethodDefault == location.DeliveryMethodCode)
                     {
-                        <p id="price">Starting at: $@location.Price</p>
-
-
+                        <p id="price"><i>(example pricing: $@location.Price for @Model.Detail.QuantityDefault with domestic ground shipping)</i></p>
                     }
                 }
 
+                        <div class="form-group">
 
+                            <label class="" asp-for="Item.Quantity">Enter Quantity:</label>
+                            <input class=" col-2 form-control" asp-for="Item.Quantity" type="number" max="@Model.Detail.QuantityMaximum" step="@Model.Detail.QuantityIncrement" value="@Model.Detail.QuantityMinimum" />
+                            <small>*Quantity Restrictions: Min @Model.Detail.QuantityMinimum/Max @Model.Detail.QuantityMaximum in increments of @Model.Detail.QuantityIncrement </small>
+                        </div>
 
-                <div class="form-group">
-                    <div class="row">
-                        <label class="col-3" asp-for="Item.Quantity">Enter Quantity:</label>
-                        <input class="col-2 form-control" asp-for="Item.Quantity" type="number" min="@Model.Detail.QuantityMinimum" max="@Model.Detail.QuantityMaximum" step="@Model.Detail.QuantityIncrement" value="@Model.Detail.QuantityDefault" />
+                <div class="design">
+                    <h4>How would you like to provide your custom design information</h4>
+
+                    <div class="design-email form-check">
+                        <input class="form-check-input" type="radio" asp-for="DesignOption" value="sendTemplate" checked />
+                        <label class="form-check-label">Send design file by email</label>
+                        <p class="design-information">Email your file along with your order confirmation to designcenter@example.com</p>
+                    </div>
+                    <div class="form-check design-file">
+                        <input class="form-check-input" type="radio" asp-for="DesignOption" value="designFile" id="designFile" />
+                        <label class="form-check-label" for="designFile">Upload your custom design </label>
+                        <input class="form-control-file" type="file" asp-for="Item.ItemFile" name="fileUpload" multiple />
+                    </div>
+
+                    <div class="design-template form-check">
+                        @if (Model.Detail.HasTemplate)
+                        {
+                            <input class="form-check-input" type="radio" asp-for="DesignOption" value="designTemplate" />
+                            <label class="form-check-label">Enter template fields</label>
+                            <p class="design-instructions">Fill in the following fields to customize your order</p>
+
+                        }
+                        <h6>We will review your files and send you a proof within one business day</h6>
                     </div>
                 </div>
-                <div class="row m-0">
-                    <span class="col-3"></span>
-                    <small>*Quantity Restrictions: Min @Model.Detail.QuantityMinimum/Max @Model.Detail.QuantityMaximum in increments of @Model.Detail.QuantityIncrement </small>
-                </div>
 
-                @* OK,OK...I KNOW THIS IS A MESS --AND I PROBABLY BROKE A THOUSAND RULES, BUT IT WAS REALLY FUN TRYING TO GET IT TO WORK! *@
-                <div id="codeBlock">
-                    @{
-
-                        List<string> countries = new List<string>();
-                        List<string> liElems = new List<string>();
-
-                        <ul class="">
-                            @foreach (var location in Model.Detail.DeliveredPrices)
-                            {
-                                string country;
-                                if (location.LocationType == "domestic")
-                                {
-                                    country = "USA";
-                                }
-                                else
-                                {
-                                    country = location.Country ?? "Intl";
-                                }
-                                countries.Add(country);
-
-                                <li class="deliveryMethods" name="@country">
-                                    <input type="radio" name="deliveryMethod" value="@location.DeliveryMethodCode">@location.Description <i>(est. Total $@location.Price for @Model.Detail.QuantityDefault)</i>
-                                </li>
-                            }
-                        </ul>
-
-
-                        var distinct = countries.Distinct();
-                        <div id="shippingSelect">
-                            <label for="countrySelector">Shipping Options:</label>
-                            <select id="countrySelector" name="deliveryMethod">
-                                @foreach (var item in distinct)
-                                {
-                                    <option value="@item">@item</option>
-                                }
-                            </select>
-                        </div>
-                    }
-                </div>
-
+                <div class="shipping-options">
+                    <label for="countrySelector">Shipping Options:</label>
+                    <select id="countrySelector" name="ccountrySelector">
+                        @foreach (var item in Model.Countries)
+                        {
+                            <option value="@item">@item</option>
+                        }
+                    </select>
+                        @foreach(var item in Model.Detail.DeliveredPrices) { 
+                            <ul class="">
+                                    <li class="deliveryMethods" name="@item.Country">
+                                        <input type="radio" name="DeliveryMethod" value="@item.DeliveryMethodCode"> @item.Description
+                                    </li>
+                                </ul>
+                        }
+                    </div>
+             
 
 
 
@@ -96,13 +91,9 @@
                 <input asp-for="Detail.QuantityIncrement" type="hidden" value="@Model.Detail.QuantityIncrement ?? 1" class="form-control" />
                 <input asp-for="Item.ProductionDays" type="hidden" value="@Model.Detail.ProductionSpeeds[0].Days" class="form-control" />
                 <input type="submit" value="Order" class="btn btn-default" />
-        
 
-    @if (Model.Detail.HasTemplate)
-    {
-        <h4>Fill in the following fields to customize your order</h4>
-        <p>TEMPLATE FORM TO GO HERE</p>
-    }
-        </form>
+
+
+            </form>
         </div>
 </div>
