--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
 <div class="container-fluid body-content">
  
-    <div class="col-10"> @RenderBody()</div>
+    <div > @RenderBody()</div>
 
 </div>
 
