--- a/PflStoreProject/SampleData/Home Page - PflStoreProject_files/site.css
+++ b/PflStoreProject/SampleData/Home Page - PflStoreProject_files/site.css
@@ -20,11 +20,9 @@ body, h4, h5, h6, p {
     text-align: center;
     
 }
-li.product-nav>a, li.product-nav{
+li.product-nav>a{
     color: #5d5d5d;
-    text-overflow: clip;
-    overflow: hidden;
-    width:100%;
+ 
 }
 .card {
     display: inline;
@@ -61,48 +59,35 @@ a.card {
 .product-nav {
  font-size: 14px;
     white-space: nowrap;
-    width: 18%;
+    width: 20%;
 }
-
+.product-show {
+    display: inline;
+}
 .design {
     background: lightgray;
     padding: 15px;
     margin: 15px 0;
 }
-
+.design-information {
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+}
 
 .product-content-panel {
     border: 1px solid #CCC;
-    width: 35%;
-    padding: 30px;
-    margin: 40px auto;
-    height: fit-content;
+
+    display: inline;
 }
 .product-image-panel {
-    width: 35%;
-    display: inline-block;
-    margin-top: 20px;
+    width: 500px;
+    display: inline;
 }
 .order-button {
     background-color: #338700;
     cursor: pointer;
 }
-.product-image{
-    margin: 20px auto;
-    width: 70%;
-    margin-left: 30%;
+image.product-image {
+    width: 400px;
 }
-#countrySelector {
-    display: inline-block;
-    width: fit-content;
-}
-
-product-view {
-    display: inline;
-}
-.design-information {
-    display: none;
-  }
-/* input#design-information:checked ~ label#design-information{ */
-/*     display:block; */
-/* }  */
