--- a/PflStoreProject/Views/Shared/_Layout.cshtml
+++ b/PflStoreProject/Views/Shared/_Layout.cshtml
@@ -12,8 +12,9 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="">
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      
+            <div class="container">
             <div class="navbar-brand">
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -23,7 +24,7 @@
                 </button>
                 <div class="">
                     <a asp-area="" asp-controller="Product" asp-action="Index" class="navbar-brand">PFL Store Project</a>
-                </div>            </div>
+                </div> </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     @* <li><a asp-area="" asp-controller="Product" asp-action="Index">Products</a></li> *@
