--- a/PflStoreProject/wwwroot/css/site.css
+++ b/PflStoreProject/wwwroot/css/site.css
@@ -10,6 +10,9 @@ body, h4, h5, h6, p {
 }
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
+nav {
+    background-color: #0471af;
+}
 
  li, ul {
      list-style: none;
@@ -31,37 +34,13 @@ li.product-nav>a, li.product-nav{
     border: blue solid 1px;
     border-radius: 5%;
 }
-a.card {
-    margin: 5px;
-    width: 130px;
-    height: 160px;
-    padding-top: 5px;
-}
-.card-body {
-    padding: 0;
-    margin-left: 30px;
-   
-}
 
-.card-title {
-    font-size: 10px;
-    overflow-wrap: normal;
-    width: 120px;
-
-}
-.card-subtitle {
-    font-size: 12px
-}
-
-.card-img-top {
-    width: 100px;
-    height: 100px;
-}
 
 .product-nav {
  font-size: 14px;
     white-space: nowrap;
     width: 18%;
+   
 }
 
 .design {
@@ -81,16 +60,18 @@ a.card {
 .product-image-panel {
     width: 35%;
     display: inline-block;
-    margin-top: 20px;
+    padding: 1% 0 1% 2%;
+    margin: 2% 0 2% 2%;
+
 }
 .order-button {
     background-color: #338700;
     cursor: pointer;
 }
 .product-image{
-    margin: 20px auto;
-    width: 70%;
-    margin-left: 30%;
+   
+    width: 100%;
+   
 }
 #countrySelector {
     display: inline-block;
@@ -103,6 +84,62 @@ product-view {
 .design-information {
     display: none;
   }
-/* input#design-information:checked ~ label#design-information{ */
-/*     display:block; */
-/* }  */
+#products-heading {
+    margin: 20px 0 20px 0;
+    color: #0471Af;
+    font-weight: 700;
+}
+
+.product-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;;
+}
+
+.product-cols {
+    /* columns: 300px 3; */
+    /* margin-bottom: 6%; */
+    /* text-wrap: none; */
+    /* margin-top: 2%; */
+}
+/* .product-blocks { */
+/*     display: inline-block; */
+/*     width: 100%; */
+/*     margin-bottom: 0; */
+/*     } */
+
+.list-group-item {
+    margin: 5px;
+    width: 330px;
+    height: 75px;
+    cursor: pointer;
+}
+.product-block-heading {
+    width: 75%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+    padding-left: 5px;
+}
+.product-block-image {
+    width: 25%;
+    text-align: center;
+}
+.product-block-thumb {
+ 
+}
+.product-block-text:hover {
+    font-weight: 700;
+    color: #0471Af;
+  
+}
+.product-block-text{
+    font-weight: 600;
+    color: #333;
+    
+}
+a, a:hover {
+    text-decoration: none;
+}
